<resources>
    <string name="app_name">SNotes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logo_of_snotes">Logo of SNotes</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="color_title">Choose a color</string>
    <string name="colors">choose a color</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="notification_channel_display_title">Notes Remainder</string>
    <string name="send_to">Send To</string>

    <!--strings for the about page-->
    <string name="version_title">Version</string>
    <string name="rate_title">Rate</string>
    <string name="rate_desc">Leave a rating in Google Play</string>
    <string name="report_title">Report</string>
    <string name="report_desc">Report bugs, request new features or just get in touch</string>
    <string name="share_title">Share</string>
    <string name="licenses">Licenses</string>
    <string name="author_name">Sriram R</string>
    <string name="author_location">Noida, India</string>
    <string name="follow_on_github">Follow on Github</string>
    <string name="progress_title">Please Wait</string>
    <string name="please_content">Please wait while we authenticate you</string>

    <string name="title_pin_dialog">Enter Pin</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="toolbar_title_protected">Protected</string>
    <string name="toolbar_title_starred">Starred</string>
    <string name="forgot_password_error_sending_mail">Error sending email. Please try again</string>
    <string name="forgot_password_incorrect_email">Please enter correct Email ID</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="pin">pin</string>
    <string name="pin_default_value">0000</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="email_invalid_error">Enter a valid Email ID</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="content_desc_undo">Undo Text</string>
    <string name="content_desc_redo">Redo Text</string>
    <string name="content_desc_bold">Bold Text Format</string>
    <string name="content_desc_italic">Italicize Text Format</string>
    <string name="content_desc_underline">Underline Text Format</string>
    <string name="content_desc_strike">Strikethrough Text Format</string>
    <string name="content_desc_bullet">Bullet Text Format</string>
    <string name="content_desc_quote">Quote Text Format</string>
    <string name="content_desc_link">Link Text Format</string>
    <string name="content_desc_clear">Clear Text Format</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="snotes_register">SNotes Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registered_already">Registered Already?</string>
    <string name="snotes_login">SNotes Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="about_logo">About Logo</string>
    <string name="note_locked">Note is Locked</string>
    <string name="note_starred">Note is Starred\'</string>
    <string name="notes_empty">You have no notes here</string>
    <string name="login_success">Logged in Successfully</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="check_your_email">Please check your email</string>
    <string name="error_auth_user_collision">Sorry. The email ID is already registered. Try logging in if it\'s your Email ID or check your Email</string>
    <string name="error_auth_invalid">Please check your Email ID and Password.</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="passwords_match_error">Passwords should match</string>
    <string name="wrong_pin">You have entered a wrong pin. Please try again</string>
    <string name="locked_note_text">******************************************************</string>
    <string name="enter_a_link">Enter a link</string>
    <string name="copied_to_clipboard">Copied to Clipboard</string>
    <string name="error_copying_clipboard">Could\'nt copy to clipboard</string>
    <string name="remainder_set">Remainder set</string>
    <string name="remainder_set_for">Remainder already set for</string>
    <string name="wanna_cancel_remainder">. Do you want to cancel the remainder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remainder_cancelled">Remainder cancelled</string>
    <string name="yet_to_release">Just wait for a little while. This app will be up on Google Play Soon</string>
    <string name="added_note">Added Note Successfully</string>
    <string name="error_editing_note">Error editing note</string>
    <string name="edited_note">Edited note</string>
    <string name="deleted_note">Deleted note successfully</string>
    <string name="error_deleting_note">Error deleting note</string>
    <string name="ping_ping">Ping Ping</string>
    <string name="share_feedback">Share feedback</string>
    <string name="add_new_note">Add new note</string>
    <string name="notes_loading">Loading notes</string>
    <string name="notes">Notes</string>
    <string name="favourites">Favourites</string>
    <string name="locked">Locked</string>
    <string name="settings">Settings</string>
    <string name="suggestions">Suggestions</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="lock">Lock</string>
    <string name="star">Star</string>
    <string name="color_choser">Color Choser</string>
    <string name="archive">Archive</string>
    <string name="menu">Menu</string>

</resources>
