<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_star_closed"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_locked"
            android:icon="@drawable/ic_lock_black"
            android:title="@string/locked" />

    </group>

    <item android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

        </menu>

    </item>

    <item android:title="@string/suggestions">
        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
